package com.cdyhrj.fastorm.meta;

public interface SqlSegment {
    String toSql();
}
