package com.cdyhrj.fastorm.queryable.from;

public interface From {
    String getName();
}
