@startuml
'https://plantuml.com/class-diagram
skin rose
hide methods
hide fields

package EntityQueryablePkg {
    class EntityQueryable
    interface SqlSegment
    class ToSqlContext
    class Select implements SqlSegment
    class From implements SqlSegment
    class Joins implements SqlSegment
    class Where implements SqlSegment
    class OrderBy implements SqlSegment
    class GroupBy implements SqlSegment
    class HavingBy implements SqlSegment
    class Paging implements SqlSegment
}


Select *-- ToSqlContext
From *-- ToSqlContext
Joins *-- ToSqlContext
Where *-- ToSqlContext
OrderBy *-- ToSqlContext
GroupBy *-- ToSqlContext
HavingBy *-- ToSqlContext
Paging *-- ToSqlContext

ToSqlContext ---* EntityQueryable
Select --o EntityQueryable
From --o EntityQueryable
Joins --o EntityQueryable
Where --o EntityQueryable
OrderBy --o EntityQueryable
GroupBy --o EntityQueryable
HavingBy --o EntityQueryable
Paging --o EntityQueryable

@enduml